[gd_scene load_steps=20 format=3 uid="uid://comy3j8oaolau"]

[ext_resource type="FontFile" uid="uid://yb7i6tqe1e6c" path="res://Assets/Fonts/joystix/joystix monospace.otf" id="1_4g8sv"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_wjan7"]
[ext_resource type="Texture2D" uid="uid://rsgrhpp26vr4" path="res://Assets/Buildings/turrents_1_left.png" id="3_m2whi"]
[ext_resource type="Texture2D" uid="uid://c7uuakh61mm3n" path="res://Assets/Buildings/shipyard.png" id="4_5icg2"]
[ext_resource type="Texture2D" uid="uid://dnyp2v78p72j3" path="res://Assets/Ships/ship_1.png" id="4_sa87j"]

[sub_resource type="LabelSettings" id="LabelSettings_rf5nv"]
font = ExtResource("1_4g8sv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_i1wn2"]
font = ExtResource("1_4g8sv")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_lufdm"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_utnn8"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_urgk4"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_2ntwy"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_1shf8"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_jsxky"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_xlshe"]
font = ExtResource("1_4g8sv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_mvwwi"]
font = ExtResource("1_4g8sv")

[sub_resource type="LabelSettings" id="LabelSettings_emr85"]
font = ExtResource("1_4g8sv")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2jfs1"]
font = ExtResource("1_4g8sv")

[sub_resource type="LabelSettings" id="LabelSettings_0v76k"]
font = ExtResource("1_4g8sv")

[sub_resource type="LabelSettings" id="LabelSettings_coa8c"]
font = ExtResource("1_4g8sv")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wjan7")

[node name="Level_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 900.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Level_Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_right = 164.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Preparation"
label_settings = SubResource("LabelSettings_rf5nv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Turn_Display" type="Label" parent="Level_Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "Turn 1"
label_settings = SubResource("LabelSettings_i1wn2")
horizontal_alignment = 1

[node name="Done_Button" type="Button" parent="Level_Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0

[node name="Text" type="Label" parent="Level_Control/Done_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "D o n e"
label_settings = SubResource("LabelSettings_lufdm")

[node name="Next_Level_Button" type="Button" parent="Level_Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0

[node name="Text" type="Label" parent="Level_Control/Next_Level_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Next Level!"
label_settings = SubResource("LabelSettings_lufdm")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1080.0
offset_right = 1440.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="Container/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level info"
label_settings = SubResource("LabelSettings_utnn8")
horizontal_alignment = 1

[node name="Life" type="HBoxContainer" parent="Container/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Life_Name" type="Label" parent="Container/VBoxContainer/MarginContainer/VBoxContainer/Life"]
layout_mode = 2
text = "Life:"
label_settings = SubResource("LabelSettings_urgk4")

[node name="Life_Value" type="Label" parent="Container/VBoxContainer/MarginContainer/VBoxContainer/Life"]
layout_mode = 2
text = "99999"
label_settings = SubResource("LabelSettings_2ntwy")

[node name="Money" type="HBoxContainer" parent="Container/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Money_Name" type="Label" parent="Container/VBoxContainer/MarginContainer/VBoxContainer/Money"]
layout_mode = 2
text = "money:"
label_settings = SubResource("LabelSettings_1shf8")

[node name="Money_Value" type="Label" parent="Container/VBoxContainer/MarginContainer/VBoxContainer/Money"]
layout_mode = 2
text = "99999
"
label_settings = SubResource("LabelSettings_jsxky")

[node name="MarginContainer2" type="MarginContainer" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Expand_Button" type="Button" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Expand_Text" type="Label" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer/Expand_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Expand!"
label_settings = SubResource("LabelSettings_xlshe")
horizontal_alignment = 1

[node name="Build_Button" type="Button" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Build_Text" type="Label" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer/Build_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "build!"
label_settings = SubResource("LabelSettings_xlshe")
horizontal_alignment = 1

[node name="Demolish_Button" type="Button" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Demolish_Text" type="Label" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer/Demolish_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "demolish!"
label_settings = SubResource("LabelSettings_xlshe")
horizontal_alignment = 1

[node name="Buildship_Button" type="Button" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Buildship_Text" type="Label" parent="Container/VBoxContainer/MarginContainer2/VBoxContainer/Buildship_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Buildship!"
label_settings = SubResource("LabelSettings_xlshe")
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="BuildingList" type="HBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="TurrentContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList"]
layout_mode = 2

[node name="Build_Turrent" type="Button" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/TurrentContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
icon = ExtResource("3_m2whi")
expand_icon = true

[node name="Name" type="Label" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/TurrentContainer"]
layout_mode = 2
text = "Turrent"
label_settings = SubResource("LabelSettings_mvwwi")
horizontal_alignment = 1

[node name="ShipyardContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList"]
layout_mode = 2

[node name="Build_Shipyard" type="Button" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/ShipyardContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
icon = ExtResource("4_5icg2")
expand_icon = true

[node name="Name" type="Label" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/ShipyardContainer"]
layout_mode = 2
text = "Shipyard"
label_settings = SubResource("LabelSettings_mvwwi")
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList"]
layout_mode = 2

[node name="ShipList" type="HBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="ShipContainer" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList"]
layout_mode = 2

[node name="Build_Ship" type="Button" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList/ShipContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
icon = ExtResource("4_sa87j")
expand_icon = true

[node name="Name" type="Label" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList/ShipContainer"]
layout_mode = 2
text = "Ship"
label_settings = SubResource("LabelSettings_mvwwi")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList"]
layout_mode = 2

[node name="Introduction" type="Label" parent="Container/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_emr85")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 0
offset_top = 720.0
offset_right = 360.0
offset_bottom = 900.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Skill_List" type="HBoxContainer" parent="Container/MarginContainer"]
layout_mode = 2

[node name="Skill_1" type="VBoxContainer" parent="Container/MarginContainer/Skill_List"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/MarginContainer/Skill_List/Skill_1"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/MarginContainer/Skill_List/Skill_1"]
layout_mode = 2
text = "Skill1"
label_settings = SubResource("LabelSettings_2jfs1")
horizontal_alignment = 1

[node name="Skill_2" type="VBoxContainer" parent="Container/MarginContainer/Skill_List"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/MarginContainer/Skill_List/Skill_2"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/MarginContainer/Skill_List/Skill_2"]
layout_mode = 2
text = "Skill2"
label_settings = SubResource("LabelSettings_0v76k")
horizontal_alignment = 1

[node name="Skill_3" type="VBoxContainer" parent="Container/MarginContainer/Skill_List"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/MarginContainer/Skill_List/Skill_3"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/MarginContainer/Skill_List/Skill_3"]
layout_mode = 2
text = "Skill3"
label_settings = SubResource("LabelSettings_coa8c")
horizontal_alignment = 1

[node name="Turn_Count_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TestTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="Level_Control/Done_Button" to="." method="_on_done_button_pressed"]
[connection signal="pressed" from="Level_Control/Next_Level_Button" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer2/VBoxContainer/Expand_Button" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer2/VBoxContainer/Build_Button" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer2/VBoxContainer/Demolish_Button" to="." method="_on_demolish_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer2/VBoxContainer/Buildship_Button" to="." method="_on_buildship_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/TurrentContainer/Build_Turrent" to="." method="_on_build_turrent_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/BuildingList/ShipyardContainer/Build_Shipyard" to="." method="_on_build_shipyard_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/MarginContainer3/VBoxContainer/MarginContainer/ShipList/ShipContainer/Build_Ship" to="." method="_on_build_ship_pressed"]
[connection signal="timeout" from="Turn_Count_Timer" to="." method="_on_turn_count_timer_timeout"]
[connection signal="timeout" from="TestTimer" to="." method="_on_test_timer_timeout"]
